# gw2-accessibility

./: .gitignore  AGENTS.md  Buffs.json  CMakeLists.txt  GW2Accessibility.json  Nexus.h  README.md  TTS_SETUP.md  build.sh  suggestions.txt  summary.txt  tts_helper.sh  windows-instructions.txt
.claude/: settings.json
references/fast-swap-releases/: README.md
src/: Chat.h  addon.cpp  addon.h  boon_ignore.h  buff_names.h  dllmain.cpp  embedded_icons.h  necrosis_png.h  reffect_pack.h  tts_messages.h  unofficial_extras.h
systemd/: gw2-tts-helper.service
